fix(printStyles): update duty highlight background color for improved visibility

--- a/src/styles/_print.scss
+++ b/src/styles/_print.scss
@@ -370,7 +370,7 @@
     }
 
     .duty-highlight {
-      background-color: #d9d9d9 !important;
+      background-color: #4e4e4e !important;
       font-weight: bold;
       -webkit-print-color-adjust: exact;
       print-color-adjust: exact;
